--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@types/react": "^17.0.0",
+    "classnames": "^2.3.2",
+    "embla-carousel-react": "^8.0.0-rc07",
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
